--- a/package.json
+++ b/package.json
@@ -15,11 +15,19 @@
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
-    "@vitejs/plugin-react": "^4.2.1",
+    "@vitejs/plugin-react": "^5.1.1",
     "autoprefixer": "^10.4.16",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.4.0",
-    "vite": "^5.0.8"
+    "vite": "^7.2.4"
+  },
+  "overrides": {
+    "glob": "13.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "glob": "13.0.0"
+    }
   }
 }
 
